# QTS

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_INVENTORY.md  GEMINI.md  MANIFEST.md  Makefile  README.md  backtest_chain.html  project_panorama.html  pyproject.toml
.github/ISSUE_TEMPLATE/: research_os_work_package.md
.github/workflows/: quality.yml
artifacts/: research_baseline_audit.json  research_baseline_audit.md  research_system_for_chatgpt55_pro.md
artifacts/analysis/: backend_class_role_review_2026-05-18.md
artifacts/quality/: class_inventory_baseline.json
backend/: AGENTS.md
configs/: backtest.gc.full.example.yaml  backtest.gc_si.example.yaml  backtest.gc_si_momentum_research.yaml  backtest.orb_vwap_trend_gc_si_costed.yaml  backtest.orb_vwap_trend_gc_si_long.yaml  backtest.precious_metal_abnormal_return_gc_si.yaml  backtest.precious_metal_cot_positioning_gc.yaml  backtest.precious_metal_cot_positioning_si.yaml  backtest.precious_metal_donchian_atr_breakout_gc.yaml  backtest.precious_metal_dual_signal_gc.yaml  backtest.precious_metal_dual_signal_si.yaml  backtest.precious_metal_dual_vix_real_yield_gc.yaml  backtest.precious_metal_dual_vix_si_gc.yaml  backtest.precious_metal_intraday_momentum_gc_si.yaml  backtest.precious_metal_ma_trend_filter_gc_si.yaml  backtest.precious_metal_microtrend_acd_switch_si.yaml  backtest.precious_metal_microtrend_acd_switch_si_cost_stress.yaml  backtest.precious_metal_microtrend_scalper_gc.yaml  backtest.precious_metal_microtrend_scalper_gc_si.yaml  backtest.precious_metal_opening_range_acd_gc.yaml  backtest.precious_metal_opening_range_acd_gc_si.yaml  backtest.precious_metal_real_yield_gc.yaml  backtest.precious_metal_real_yield_si.yaml  backtest.precious_metal_tsmom_vol_gc_si.yaml  backtest.precious_metal_utc_window_gc.yaml  backtest.precious_metal_utc_window_gc_si.yaml  backtest.precious_metal_vix_risk_gc.yaml  backtest.precious_metal_vix_risk_si.yaml  backtest.precious_metal_vol_target_trend_gc.yaml  backtest.precious_metal_vol_target_trend_si.yaml  backtest.precious_metal_vwap_reversion_gc.yaml  backtest.precious_metal_vwap_reversion_gc_si.yaml  backtest.ratio_mean_reversion_gc_si.yaml  backtest.route_b_dual_supertrend_gc.yaml  backtest.route_b_dual_supertrend_si.yaml  backtest.route_c_vol_target_trend_gc.yaml  backtest.route_c_vol_target_trend_si.yaml  backtest.route_d_gc_si_ratio_mean_reversion.yaml  backtest.route_e_carry_trend.yaml  backtest.route_f_dual_momentum_rotation.yaml  (+32 more)
configs/alerts/: qts_alerts.yaml
configs/data/: historical.local.yaml
configs/optimizer/: quickstart.yaml  vwap_factor_research.yaml  vwap_factor_research_risk_reward.yaml  vwap_factor_search.yaml
configs/promotion/: default.yaml
configs/research/: backtest_gc_si_smoke.yaml  orb_vwap_trend_gc_si_long.yaml  precious_goal_gc_si_hft.yaml  precious_hft_gc.yaml  precious_literature_gc_si.yaml  precious_literature_gc_si_cot.yaml  precious_literature_gc_si_macro.yaml  precious_literature_gc_si_risk.yaml  precious_literature_gc_vix_real_yield.yaml  quickstart.yaml  three_strategy_gc_si.yaml  vwap.yaml  vwap_gc_15m_long.yaml  vwap_gc_5m_long.yaml  vwap_gc_long.yaml  vwap_si_15m_long.yaml  vwap_si_5m_long.yaml  vwap_si_long.yaml
configs/strategies/: carry_momentum_rotation_gc_si.yaml  gc_momentum.yaml  gc_si_momentum.yaml  gc_si_momentum_research.yaml  orb_vwap_trend_filter.yaml  precious_metal_abnormal_return_gc_si.yaml  precious_metal_cot_positioning_gc.yaml  precious_metal_cot_positioning_si.yaml  precious_metal_donchian_atr_breakout_gc.yaml  precious_metal_dual_signal_gc.yaml  precious_metal_dual_signal_si.yaml  precious_metal_dual_vix_real_yield_gc.yaml  precious_metal_dual_vix_si_gc.yaml  precious_metal_intraday_momentum_gc_si.yaml  precious_metal_ma_trend_filter_gc_si.yaml  precious_metal_microtrend_acd_switch_si.yaml  precious_metal_microtrend_scalper_gc.yaml  precious_metal_opening_range_acd_gc.yaml  precious_metal_real_yield_gc.yaml  precious_metal_real_yield_si.yaml  precious_metal_tsmom_vol_gc_si.yaml  precious_metal_utc_window_gc_si.yaml  precious_metal_vix_risk_gc.yaml  precious_metal_vix_risk_si.yaml  precious_metal_vwap_reversion_gc.yaml  ratio_mean_reversion_gc_si.yaml  vol_target_trend_gc_si.yaml  vwap_pullback.yaml  (+3 more)
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.local.yml
docs/: GETTING_STARTED.md  INDEX.md  README.md  repo-hygiene.md  testing.md
examples/: __init__.py
frontend/: AGENTS.md  index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
rust/: Cargo.toml
rust/crates/backtest/: Cargo.toml
rust/crates/backtest/src/: lib.rs
rust/crates/calendar/: Cargo.toml
rust/crates/calendar/src/: lib.rs
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: main.rs
rust/crates/data/: Cargo.toml
rust/crates/data/src/: aggregation.rs  csv_index.rs  lib.rs  materialize.rs  timeframe.rs
rust/crates/domain/: Cargo.toml
rust/crates/domain/src/: bar.rs  ids.rs  interval.rs  lib.rs
rust/crates/python/: Cargo.toml
rust/crates/python/src/: lib.rs
rust/crates/replay/: Cargo.toml
rust/crates/replay/src/: lib.rs
scripts/: __init__.py  audit_repo_hygiene.py  bootstrap.py  build_carry_signal_dataset.py  build_historical_csv_index.py  compare_research_runs.py  generate_backtest_report.py  generate_external_readiness_smoke_evidence.py  generate_openapi_json.py  ibkr_collect_environment_evidence.py  ibkr_paper_order_lifecycle_drill.py  install_ibapi_official.py  materialize_historical_timeframes.py  promote_strategy.py  run_api.py  run_backtest.py  run_load.py  run_optimizer.py  run_paper.py  run_paper_ibkr.py  run_research.py  run_research_backtest.py  run_worker.py  update_project_panorama_source_index.py  validate_historical.py  validate_historical_gc_si.py  validate_promotion.py  verify_final_readiness.py  verify_guardrails.py  verify_rust_core_migration.py  verify_rust_materialize_golden.py
strategies/: README.md  registry.yaml
tests/: AGENTS.md  README.md  __init__.py  conftest.py
(+1607 files in other folders)
