[project]
name = "quant-trading-system"
version = "0.1.0"
description = "Python-first quantitative trading system"
requires-python = ">=3.11"
dependencies = [
    "exchange-calendars",
    "ib-async>=2.1.0",
    "pandas",
    "pydantic",
    "pyyaml",
]

[tool.qts.ibkr_api]
package = "ibapi"
version = "10.46.1"
source_url = "https://interactivebrokers.github.io/downloads/twsapi_macunix.1046.01.zip"
subdirectory = "IBJts/source/pythonclient"
sha256 = "d62d0bd602d9b0154f73246b1224467b6cff7062d34fe864510691b7677148c4"

[dependency-groups]
api = [
    "fastapi",
    "uvicorn",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "ruff",
    "mypy",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
mypy_path = "backend/src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["backend/src", "."]
markers = [
    "unit: fast unit tests",
    "integration: multi-module integration tests",
    "anchor: domain correctness invariant tests",
    "slow: slow tests not required for quick local feedback",
    "external: tests requiring externally collected broker or service evidence",
    "benchmark: performance benchmarks measured under pytest-benchmark",
]
