[workspace]
members = [
    "crates/domain",
    "crates/calendar",
    "crates/data",
    "crates/replay",
    "crates/backtest",
    "crates/python",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.9"
csv = "1"
rust_decimal = "1"
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
