[package]
name = "qts-backtest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "qts_backtest"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
qts-domain = { path = "../domain" }
qts-replay = { path = "../replay" }
rust_decimal = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
