[package]
name = "qts-calendar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "qts_calendar"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
qts-domain = { path = "../domain" }
thiserror = { workspace = true }

[lints]
workspace = true
