[package]
name = "qts-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "qts_python"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
qts-backtest = { path = "../backtest" }
qts-data = { path = "../data" }
qts-domain = { path = "../domain" }
qts-replay = { path = "../replay" }
rust_decimal = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
